--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,7 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
-    "angular-material": "^1.1.4"
+    "angular-touch": "^1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
